completed html generator and template literals

--- a/src/template.html
+++ b/src/template.html
@@ -15,12 +15,93 @@
 <body>
     <nav class="navbar navbar-dark" style="background-color: #b32fff;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="../images/team-icon-2.png" alt="" width="30" height="24" class="d-inline-block align-top">
-            Team Profile
-          </a>
+            <a class="navbar-brand" href="#">
+                <img src="../images/team-icon-2.png" alt="" width="30" height="24" class="d-inline-block align-top">
+                Team Profile
+            </a>
         </div>
-      </nav>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+
+            <div class="card float-start shadow col-lg-4 col-sm-12 mt-5 mx-auto">
+                <div class="card-header bg-dark text-light">
+                    Manager Name
+                    <br>
+                    Manager
+                </div>
+                <ul>
+                    <li class="text-dark">ID: IDNUM</li>
+                    <li class="text-dark">Email: <a href="mailto:${manager.email}">${manager.email}</a>
+                    </li>
+                    <li class="text-dark">Office Number: officeNumber</li>
+                </ul>
+
+            </div>
+
+            <div class="card float-start shadow col-lg-4 col-sm-12 mt-5 mx-auto">
+                <div class="card-header bg-dark text-light">
+                    Engineer Name
+                    <br>
+                    Engineer
+                </div>
+                <ul>
+                    <li class="text-dark">ID: IDNUM</li>
+                    <li class="text-dark">Email: <a
+                            href="mailto:${engineer.email}">${engineer.email}</a>
+                    </li>
+                    <li class="text-dark">Github: github</li>
+                </ul>
+
+            </div>
+
+            <div class="card float-start shadow col-lg-4 col-sm-12 mt-5 mx-auto">
+                <div class="card-header bg-dark text-light">
+                    Engineer Name
+                    <br>
+                    Engineer
+                </div>
+                <ul>
+                    <li class="text-dark">ID: IDNUM</li>
+                    <li class="text-dark">Email: <a
+                            href="mailto:${engineer.email}">${engineer.email}</a>
+                    </li>
+                    <li class="text-dark">Github: github</li>
+                </ul>
+
+            </div>
+
+            <div class="card float-start shadow col-lg-4 col-sm-12 mt-5 mx-auto">
+                <div class="card-header bg-dark text-light">
+                    Intern Name
+                    <br>
+                    Intern
+                </div>
+                <ul>
+                    <li class="text-dark">ID: IDNUM</li>
+                    <li class="text-dark">Email: <a href="mailto:${intern.email}">${intern.email}</a>
+                    </li>
+                    <li class="text-dark">School: school</li>
+                </ul>
+
+            </div>
+
+        <div class="card float-start shadow col-lg-4 col-sm-12 mt-5 mx-auto">
+            <div class="card-header bg-dark text-light">
+                Intern Name
+                <br>
+                Intern
+            </div>
+            <ul>
+                <li class="text-dark">ID: IDNUM</li>
+                <li class="text-dark">Email: <a href="mailto:${intern.email}">${intern.email}</a>
+                </li>
+                <li class="text-dark">School: school</li>
+            </ul>
+        </div>
+    </div>
+    </div>
 
 </body>
 
